--- a/microbenchmarks/concrete/factor/Makefile
+++ b/microbenchmarks/concrete/factor/Makefile
@@ -1,4 +1,24 @@
 ROOT?=/project
 BIN?=main
-all:
+all: main objdump smalltest
+
+
+main: 
 	docker run --user $$(id -u):$$(id -g) --rm -it --mount type=bind,src=$$(pwd),dst=/project/ tase bash -c 'cd $(ROOT) && make -f build.Makefile'
+
+
+test:
+	cd build/ && rm -f Monitor* && cp ../GutenburgDictionary.txt . && ./run.sh -taseDebug -modelDebug -dontFork -taseManager=false -execMode=INTERP_ONLY
+
+
+smalltest:
+	cd build/ && rm -f Monitor* && ./run.sh -taseDebug -modelDebug -dontFork -taseManager=false -execMode=INTERP_ONLY
+
+mixedtest:
+	cd build/ && rm -f Monitor* && ./run.sh -taseDebug -modelDebug -dontFork -taseManager=false
+
+objdump:
+	objdump -C -D -w -M suffix -j .text build/main > build/obj.dump
+
+clean:
+	rm -rf build/*
