--- a/microbenchmarks/concrete/sha256/Makefile
+++ b/microbenchmarks/concrete/sha256/Makefile
@@ -8,14 +8,14 @@ main:
 
 
 test:
-	cd build/ && rm -f Monitor* && cp ../GutenburgDictionary.txt . && ./run.sh -taseDebug -modelDebug -dontFork -taseManager=false -execMode=INTERP_ONLY
+	cd build/ && rm -f Monitor* && ./run.sh -taseDebug -modelDebug -dontFork -taseManager=false -execMode=INTERP_ONLY -singleStepping - ../GutenburgDictionary.txt
 
 
 smalltest:
-	cd build/ && rm -f Monitor* && ./run.sh -taseDebug -modelDebug -dontFork -taseManager=false -execMode=INTERP_ONLY - ../harness.c
+	cd build/ && rm -f Monitor* && ./run.sh -taseDebug -modelDebug -dontFork -taseManager=false -execMode=INTERP_ONLY -singleStepping - ../harness.c
 
 mixedtest:
-	cd build/ && rm -f Monitor* && ./run.sh -taseDebug -modelDebug -dontFork -taseManager=false  - ../harness.c
+	cd build/ && rm -f Monitor* && ./run.sh -taseDebug -modelDebug -singleStepping  - ../GutenburgDictionary.txt
 
 objdump:
 	objdump -C -D -w -M suffix -j .text build/main > build/obj.dump
