--- a/microbenchmarks/concrete/Makefile
+++ b/microbenchmarks/concrete/Makefile
@@ -1,12 +1,12 @@
-dirs=$(realpath $(wildcard */))
+dirs=cksum md5sum sha256sum factor # $(realpath $(wildcard */))
 SHELL:=/bin/bash
-CFLAGS?=-O1
+CFLAGS?=-O0
 
 #MAKEFLAGS:= -j 4 -k
 
-all: progs mixed interp
+all: progs mixedres
 
-.PHONY: mixed mixeditems mixedres interp interpitems interpres clean progs
+.PHONY: mixed mixeditems mixedres interp interpitems interpres clean progs tsort
 
 clean: $(addsuffix .clean,$(dirs))
 
@@ -14,36 +14,34 @@ clean: $(addsuffix .clean,$(dirs))
 	$(MAKE) -C $< clean
 
 
-mixed: mixeditems
-interp: interpitems
-
 progs: $(addsuffix .main,$(dirs))
 
-mixeditems: $(addsuffix .mitem,$(dirs))
+mixeditems: $(addsuffix .mitem,$(dirs)) tsort.mitem
+
+interpitems: $(addsuffix .mitem,$(dirs)) tsort.iitem
 
 %.mitem: %
 	$(MAKE) -C $< smallmixedtest && $(MAKE) -C $< mixedres
 
-mixedres: $(addsuffix .mixed,$(dirs))
+mixedres: $(addsuffix .mixed,$(dirs)) tsort.mm interpitems
 
-%.mixed: %
+tsort.mm: tsort.mitem
+	echo ""; echo ""; echo "tsort"; x=$$(diff <(tsort tsort/tsortShort) <(cat tsort/mixedred.txt)); if [[ $$x ]]; then echo "test: FAIL"; else echo "test: PASS"; fi
+
+%.mixed: % $(addsuffix .mitem,$(dirs)) tsort.mitem
 	echo ""; echo ""; echo $<; echo "test:"; cat $</mixedres.txt; echo "ref:"; cat $</ref.txt
 
-
-interp: $(addsuffix .iitem,$(dirs))
 
 %.iitem: %
 	$(MAKE) -C $< smalltest && $(MAKE) -C $< interpres
 
+interpres: $(addsuffix .interp,$(dirs)) tsort.ii mixeditems
 
-interpres: $(addsuffix .interp,$(dirs))
-
-tsort.interp:
+tsort.ii: tsort.iitem $(addsuffix .iitem,$(dirs))
 	echo ""; echo ""; echo "tsort"; x=$$(diff <(tsort tsort/tsortShort) <(cat tsort/interpres.txt)); if [[ $$x ]]; then echo "test: FAIL"; else echo "test: PASS"; fi
 
-%.interp: %
+%.interp: % $(addsuffix .iitem,$(dirs)) tsort.iitem
 	echo ""; echo ""; echo $<; echo "test:"; cat $</interpres.txt; echo "ref:"; cat $</ref.txt;
-
 
 %.main: %
 	$(MAKE) CFLAGS="$(CFLAGS)" -C $<
