--- a/microbenchmarks/concrete/factor/Makefile
+++ b/microbenchmarks/concrete/factor/Makefile
@@ -8,7 +8,7 @@ all: build/main build/obj.dump
 
 
 build/main: 
-	docker run --user $$(id -u):$$(id -g) --rm -it --mount type=bind,src=$$(pwd),dst=/project/ tase bash -c 'cd $(ROOT) && make CFLAGS="$(CFLAGS)" -f build.Makefile'
+	docker run --user $$(id -u):$$(id -g) --rm --mount type=bind,src=$$(pwd),dst=/project/ tase bash -c 'cd $(ROOT) && make CFLAGS="$(CFLAGS)" -f build.Makefile'
 
 .PHONY: test gdbtest smalltest mixedtest objdump clean
 test:
@@ -17,13 +17,6 @@ test:
 
 gdbtest:
 	cd build/ && env KLEE_RUNTIME_LIBRARY_PATH=$$(pwd)/bitcode/ gdb --args main -project=main -taseDebug -modelDebug -dontFork -taseManager=false -singleStepping -check-overshift=false - $(SMALL)
-
-
-smalltest:
-	cd build/ && rm -f Monitor* && ./run.sh -taseDebug -modelDebug -dontFork -taseManager=false -execMode=INTERP_ONLY -singleStepping -check-overshift=false - $(SMALL)
-
-smallmixedtest:
-	cd build/ && rm -f Monitor* && ./run.sh -taseDebug -modelDebug -dontFork -taseManager=false -singleStepping -check-overshift=false - $(SMALL)
 
 mixedtest:
 	cd build/ && rm -f Monitor* && ./run.sh -taseDebug -modelDebug -dontFork -taseManager=false -singleStepping -check-overshift=false - $(LARGE)
@@ -35,11 +28,46 @@ longtest:
 	cd build/ && rm -f Monitor* && nohup ./run.sh -dontFork -taseManager=false -execMode=INTERP_ONLY -singleStepping -check-overshift=false - $(LARGE) &
 
 clean:
-	rm -rf build/*
+	rm -rf build/* res*.txt interpres*.txt mixedres*.txt
 
 
-mixedres:
-	grep $(SMALL) build/Monitor | tail -n1 | sed 's/.*"//g' > mixedres.txt
 
-interpres:
-	grep $(SMALL) build/Monitor | tail -n1 | sed 's/.*"//g' > interpres.txt
+.PRECIOUS: build/Monitor.interp% build/Monitor.mixed%
+build/Monitor.interp%:
+	cd build/ && ./run.sh -dontFork -taseManager=false -execMode=INTERP_ONLY -singleStepping -check-overshift=false -modelDebug -log=$(notdir $@) - $(SMALL)
+
+
+build/Monitor.mixed%:
+	cd build/ && ./run.sh -dontFork -taseManager=false -singleStepping -check-overshift=false -modelDebug -log=$(notdir $@) - $(SMALL)
+
+
+mixedres%.txt: build/Monitor.mixed%
+	grep $(SMALL) $< | tail -n1 | sed 's/.*"//g' > $@
+
+
+interpres%.txt: build/Monitor.interp%
+	grep $(SMALL) $< | tail -n1 | sed 's/.*"//g' > $@
+
+
+ref.txt:
+	factor $(SMALL) > ref.txt
+
+.PHONY: resx5.txt
+resx5.txt: cleanres res_1.txt res_2.txt res_3.txt res_4.txt res_5.txt
+	echo "factor:" > resx5.txt
+	cat $(wildcard res_*.txt) >> resx5.txt
+
+.PHONY: res.txt
+res.txt: cleanres res_1.txt
+	echo "factor:" > res.txt
+	cat $(wildcard res_*.txt) >> res.txt
+
+.PHONY: cleanres
+cleanres:
+	rm -f res*.txt
+
+
+res_%.txt: ref.txt mixedres%.txt interpres%.txt
+	echo "  rep$*:" >> $@
+	diff -q ref.txt interpres$*.txt; x=$$?; if [ $$x -ne 0 ]; then echo "    interp: FAIL"; else echo "    interp: PASS"; fi >> $@
+	diff -q ref.txt mixedres$*.txt; y=$$?; if [ $$y -ne 0 ]; then echo "    mixed: FAIL"; else echo "    mixed: PASS"; fi >> $@
