--- a/microbenchmarks/concrete/tsort/Makefile
+++ b/microbenchmarks/concrete/tsort/Makefile
@@ -6,7 +6,7 @@ all: build/main build/obj.dump
 
 
 build/main: 
-	docker run --user $$(id -u):$$(id -g) --rm -it --mount type=bind,src=$$(pwd),dst=/project/ tase bash -c 'cd $(ROOT) && make CFLAGS="$(CFLAGS)" -f build.Makefile'
+	docker run --user $$(id -u):$$(id -g) --rm --mount type=bind,src=$$(pwd),dst=/project/ tase bash -c 'cd $(ROOT) && make CFLAGS="$(CFLAGS)" -f build.Makefile'
 
 
 test:
@@ -16,27 +16,54 @@ test:
 gdbtest: tsortShort
 	cd build/ && head -n 1000 ../tsortFile > tsortShort && env KLEE_RUNTIME_LIBRARY_PATH=$$(pwd)/bitcode/ gdb --args main -project=main -taseDebug -modelDebug -dontFork -taseManager=false -singleStepping -check-overshift=false - tsortShort
 
-smalltest: tsortShort
-	cd build/ && rm -f Monitor* && ./run.sh -modelDebug -dontFork -taseManager=false -execMode=INTERP_ONLY -singleStepping -check-overshift=false - ../tsortShort
-
-smallmixedtest: tsortShort
-	cd build/ && rm -f Monitor* && ./run.sh -modelDebug -dontFork -taseManager=false  -singleStepping -check-overshift=false - ../tsortShort
-
 mixedtest:
-	cd build/ && rm -f Monitor* && ./run.sh -taseDebug -modelDebug -dontFork -taseManager=false -check-overshift=false -singleStepping -check-overshift=false - ../tsortFile
+	cd build/ && rm -f Monitor* && ./run.sh -dontFork -taseManager=false -check-overshift=false -singleStepping -check-overshift=false - ../tsortFile
 
 build/obj.dump: build/main
 	objdump -C -D -w -M suffix -j .text build/main > build/obj.dump
 
 clean:
-	rm -rf build/*
+	rm -rf build/* res*.txt interpres*.txt mixedres*.txt
 
-interpres:
-	grep ^OUT build/Monitor | awk '{print $$2}' > interpres.txt
 
-mixedres:
-	grep ^OUT build/Monitor | awk '{print $$2}' > mixedres.txt
+build/Monitor.interp%: tsortShort
+	cd build/ && ./run.sh -dontFork -taseManager=false -execMode=INTERP_ONLY -singleStepping -check-overshift=false -modelDebug -log=$(notdir $@) - ../tsortShort
+
+
+build/Monitor.mixed%: tsortShort
+	cd build/ && ./run.sh -dontFork -taseManager=false  -singleStepping -check-overshift=false -modelDebug -log=$(notdir $@) - ../tsortShort
+
+
+interpres%.txt: build/Monitor.interp%
+	grep ^OUT $< | awk '{print $$2}' > $@
+
+mixedres%.txt: build/Monitor.mixed%
+	grep ^OUT $< | awk '{print $$2}' > $@
 
 
 tsortShort:
 	head -n 10000 tsortFile > tsortShort
+
+
+ref.txt: tsortShort
+	tsort tsortShort > ref.txt
+
+.PHONY: resx5.txt
+resx5.txt: cleanres res_1.txt res_2.txt res_3.txt res_4.txt res_5.txt
+	echo "tsort:" > resx5.txt
+	cat res_*.txt >> resx5.txt
+
+.PHONY: res.txt
+res.txt: cleanres res_1.txt
+	echo "tsort:" > res.txt
+	cat res_*.txt >> res.txt
+
+.PHONY: cleanres
+cleanres:
+	rm -f res*.txt
+
+
+res_%.txt: ref.txt interpres%.txt mixedres%.txt
+	echo "  rep$*:" >> $@
+	diff -q ref.txt interpres$*.txt &>/dev/null; x=$$?; if [ $$x -ne 0 ]; then echo "    interp: FAIL"; else echo "    interp: PASS"; fi >> $@
+	diff -q ref.txt mixedres$*.txt &>/dev/null; y=$$?; if [ $$y -ne 0 ]; then echo "    mixed: FAIL"; else echo "    mixed: PASS"; fi >> $@
