updated parseltongue to fix problem due to updated multiprocessing

--- a/install/Makefile
+++ b/install/Makefile
@@ -19,7 +19,7 @@ MINISAT_OPTS=-DSTATIC_BINARIES=ON -DCMAKE_INSTALL_PREFIX="$(RUN_DIR)"
 STP_OPTS=-DBUILD_SHARED_LIBS:BOOL=OFF -DENABLE_PYTHON_INTERFACE:BOOL=OFF -DCMAKE_INSTALL_PREFIX="$(RUN_DIR)" -DUSE_CRYPTOMINISAT4:BOOL=OFF -DNO_BOOST:BOOL=ON
 
 # tsx_llvm cmake
-TSX_LLVM_OPTS=-DCMAKE_INSTALL_PREFIX="$(RUN_DIR)" -DCMAKE_BUILD_TYPE="Debug" -DCMAKE_C_FLAGS="-fdiagnostics-color=always -fmax-errors=3" -DCMAKE_CXX_FLAGS="-fdiagnostics-color=always -fmax-errors=3" -DLLVM_USE_LINKER="gold" -DLLVM_TARGETS_TO_BUILD="X86" -DLLVM_ENABLE_PROJECTS="clang" -DBUILD_SHARED_LIBS=FALSE -DLLVM_OPTIMIZED_TABLEGEN=TRUE -DLLVM_INCLUDE_EXAMPLES=FALSE -DLLVM_INCLUDE_TESTS=FALSE -DLLVM_INCLUDE_GO_TESTS=FALSE -DLLVM_INCLUDE_BENCHMARKS=FALSE -DLLVM_INCLUDE_DOCS=FALSE -DLLVM_ENABLE_OCAMLDOC=FALSE -DLLVM_ENABLE_BINDINGS=FALSE -DLLVM_INCLUDE_UTILS=FALSE -DLLVM_INCLUDE_RUNTIMES=FALSE -DLLVM_BUILD_STATIC=FALSE -DTASE_INCLUDE_DIR="$(INCLUDE_DIR)"
+TSX_LLVM_OPTS=-DCMAKE_INSTALL_PREFIX="$(RUN_DIR)" -DCMAKE_BUILD_TYPE="Debug" -DCMAKE_C_FLAGS="-fdiagnostics-color=always -fmax-errors=3" -DCMAKE_CXX_FLAGS="-fdiagnostics-color=always -fmax-errors=3" -DLLVM_USE_LINKER="gold" -DLLVM_TARGETS_TO_BUILD="X86" -DLLVM_ENABLE_PROJECTS="clang" -DBUILD_SHARED_LIBS=FALSE -DLLVM_OPTIMIZED_TABLEGEN=TRUE -DLLVM_INCLUDE_EXAMPLES=FALSE -DLLVM_INCLUDE_TESTS=FALSE -DLLVM_INCLUDE_GO_TESTS=FALSE -DLLVM_INCLUDE_BENCHMARKS=FALSE -DLLVM_INCLUDE_DOCS=FALSE -DLLVM_ENABLE_OCAMLDOC=FALSE -DLLVM_ENABLE_BINDINGS=FALSE -DLLVM_INCLUDE_UTILS=FALSE -DLLVM_INCLUDE_RUNTIMES=FALSE -DLLVM_BUILD_STATIC=FALSE -DTASE_INCLUDE_DIR="$(INCLUDE_DIR)" -DPYTHON_EXECUTABLE="/usr/bin/python2" -DPYTHON_VERSION_STRING="2.7.18" -DCXX_STANDARD="C++17"
 
 
 # for cleanup - we don't need these tools in the container but they are built with TASE_CLANG
@@ -41,14 +41,14 @@ $(INCLUDE_DIR)/tase/%.h: $(BUILD_DIR)/tase/include/%.h
 	cp $< $@ 
 
 
-.PHONY: parseltongue
-parseltongue:
-	cp -r $(BUILD_DIR)/parseltongue86/ $(RUN_DIR)/parseltongue86/
-	cd $(RUN_DIR)/parseltongue86/ && ./setup.sh
-
-
 .PHONY: setup
 setup: klee cleanup
+
+
+.PHONY: parseltongue
+parseltongue:
+#	cp -r $(BUILD_DIR)/parseltongue86/ $(RUN_DIR)/parseltongue86/
+	cd $(BUILD_DIR)/parseltongue86/ && ./setup.sh
 
 
 .PHONY: klee
@@ -64,8 +64,8 @@ $(BUILD_DIR)/binutils-gdb/binutils/objdump:
 	$(MAKE) -C $(BUILD_DIR)/binutils-gdb/
 
 
-/objdump: $(BUILD_DIR)/binutils-gdb/binutils/objdump
-	cp $(BUILD_DIR)/binutils-gdb/binutils/objdump /objdump
+/TASE/objdump: $(BUILD_DIR)/binutils-gdb/binutils/objdump
+	cp $(BUILD_DIR)/binutils-gdb/binutils/objdump /TASE/objdump
 
 
 $(LIBTASE):
