added models and shims, fixed makefiles for microbenchmarks

--- a/microbenchmarks/concrete/factor/Makefile
+++ b/microbenchmarks/concrete/factor/Makefile
@@ -3,12 +3,13 @@ BIN?=main
 SMALL=5413218152718641574491217
 LARGE=16895424309675413218152718641574491217
 CFLAGS?=-O0
-
+USER=--user $$(id -u):$$(id -g)
+DOCKER=docker run $(USER) --rm --mount type=bind,src=$$(pwd),dst=/project/ tase bash
 all: build/main build/obj.dump
 
 
 build/main: 
-	docker run --user $$(id -u):$$(id -g) --rm --mount type=bind,src=$$(pwd),dst=/project/ tase bash -c 'cd $(ROOT) && make CFLAGS="$(CFLAGS)" -f build.Makefile'
+	$(DOCKER) -c 'cd $(ROOT) && make CFLAGS="$(CFLAGS)" -f build.Makefile'
 
 .PHONY: test gdbtest smalltest mixedtest objdump clean
 test:
@@ -30,17 +31,15 @@ longtest:
 clean:
 	rm -rf build/* res*.txt interpres*.txt mixedres*.txt
 
-
+#.PRECIOUS: build/Monitor.interp% interp_time% build/Monitor.mixed% mixed_time%
 build/Monitor.interp% interp_time%:
-	cd build/ && time( ./run.sh -dontFork -taseManager=false -execMode=INTERP_ONLY -singleStepping -check-overshift=false -modelDebug -log=$(notdir $@) - $(SMALL) ) > interp_time$*
-
+	$(DOCKER) -c 'cd /project/build/ && { time ./run.sh -dontFork -taseManager=false -execMode=INTERP_ONLY -singleStepping -check-overshift=false -taseDebug -modelDebug -log=$(notdir $@) - $(SMALL) 2>1 ; } 2> ../interp_time$*'
 
 build/Monitor.mixed% mixed_time%:
-	cd build/ && $( ./run.sh -dontFork -taseManager=false -singleStepping -check-overshift=false -modelDebug -log=$(notdir $@) - $(SMALL) ) > mixed_time$*
-
+	$(DOCKER) -c 'cd /project/build/ && { time ./run.sh -dontFork -taseManager=false -singleStepping -check-overshift=false -taseDebug -modelDebug -log=$(notdir $@) - $(SMALL) 2>1 ; } 2> ../mixed_time$*'
 
 mixedres%.txt: build/Monitor.mixed%
-	grep $(SMALL) $< | tail -n1 > $@
+	grep $(SMALL) $< | tail -n1 | sed 's/.*"//g' > $@
 
 
 interpres%.txt: build/Monitor.interp%
@@ -67,5 +66,5 @@ cleanres:
 
 res_%.txt: ref.txt mixedres%.txt interpres%.txt
 	echo "  rep$*:" >> $@
-	diff -q ref.txt interpres$*.txt; x=$$?; if [ $$x -ne 0 ]; then echo "    interp: FAIL, $$(cat interp_time$*)"; else echo "    interp: PASS, $$(cat interp_time$*)"; fi >> $@
-	diff -q ref.txt mixedres$*.txt; y=$$?; if [ $$y -ne 0 ]; then echo "    mixed: FAIL, $$(cat mixed_time$*)"; else echo "    mixed: PASS, $$(cat mixed_time$*)"; fi >> $@
+	diff -q ref.txt interpres$*.txt; x=$$?; if [ $$x -ne 0 ]; then echo "    interp: FAIL, $$(grep user interp_time$* | awk '{print $$2}')"; else echo "    interp: PASS, $$(grep user interp_time$* | awk '{print $$2}')"; fi >> $@
+	diff -q ref.txt mixedres$*.txt; y=$$?; if [ $$y -ne 0 ]; then echo "    mixed: FAIL, $$(grep user mixed_time$* | awk '{print $$2}')"; else echo "    mixed: PASS, $$(grep user mixed_time$* | awk '{print $$2}')"; fi >> $@
