--- a/microbenchmarks/concrete/sha256sum/Makefile
+++ b/microbenchmarks/concrete/sha256sum/Makefile
@@ -1,11 +1,12 @@
 ROOT?=/project
 BIN?=main
 CFLAGS?=-O0
-
+USER=--user $$(id -u):$$(id -g)
+DOCKER=docker run $(USER) --rm --mount type=bind,src=$$(pwd),dst=/project/ tase bash
 all: build/main build/obj.dump
 
 build/main: 
-	docker run --user $$(id -u):$$(id -g) --rm --mount type=bind,src=$$(pwd),dst=/project/ tase bash -c 'cd $(ROOT) && make CFLAGS="$(CFLAGS)" -f build.Makefile'
+	$(DOCKER) bash -c 'cd $(ROOT) && make CFLAGS="$(CFLAGS)" -f build.Makefile'
 
 
 test:
@@ -26,12 +27,10 @@ clean:
 
 
 build/Monitor.interp% interp_time%:
-	cd build/ && time( ./run.sh -dontFork -taseManager=false -execMode=INTERP_ONLY -singleStepping -check-overshift=false -modelDebug -taseDebug -log=$(notdir $@) - ../harness.c ) > interp_time$*
-
+	$(DOCKER) -c 'cd /project/build/ && { time ./run.sh -dontFork -taseManager=false -execMode=INTERP_ONLY -singleStepping -check-overshift=false -taseDebug -modelDebug -log=$(notdir $@) - ../harness.c 2>1 ; } 2> ../interp_time$*'
 
 build/Monitor.mixed% mixed_time%:
-	cd build/ && time( ./run.sh -dontFork -taseManager=false -singleStepping -check-overshift=false -taseDebug -modelDebug -log=$(notdir $@) - ../harness.c ) > mixed_time$*
-
+	$(DOCKER) -c 'cd /project/build/ && { time ./run.sh -dontFork -taseManager=false -singleStepping -check-overshift=false -taseDebug -modelDebug -log=$(notdir $@) - ../harness.c 2>1 ; } 2> ../mixed_time$*'
 
 mixedres%.txt: build/Monitor.mixed%
 	x=$$(grep -c model_printf $<); if [ $$x -gt 0 ]; then grep -A2 model_printf $< | tail -n 1 > $@; else grep -A1 model_puts $< | tail -n1 > $@; fi
